--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@discordjs/opus": "^0.7.0",
     "@discordjs/voice": "^0.8.0",
     "discord.js": "^13.6.0",
+    "ffmpeg-static": "^4.4.1",
     "sodium": "^3.0.2",
     "ytdl-core": "^4.11.0",
     "ytpl": "^2.3.0",
