--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/bot.js",
   "type": "module",
   "scripts": {
-    "start": "npx tsc && node ."
+    "start": "npx tsc && node . --experimental-fetch"
   },
   "author": "Brandon Doornbos",
   "license": "GPL-3.0",
@@ -18,8 +18,7 @@
     "ytdl-core": "^4.11.0",
     "ytpl": "^2.3.0",
     "ytsr": "^3.6.0",
-    "cheerio": "^1.0.0-rc.10",
-    "got": "^12.0.3"
+    "cheerio": "^1.0.0-rc.10"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.16.0",
