--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vibin",
-  "version": "1.3.0",
+  "version": "1.3.2",
   "description": "Discord music bot",
   "main": "dist/bot.js",
   "type": "module",
@@ -10,21 +10,21 @@
   "author": "Brandon Doornbos",
   "license": "GPL-3.0",
   "dependencies": {
-    "@discordjs/opus": "^0.7.0",
-    "@discordjs/voice": "^0.8.0",
-    "discord.js": "^13.6.0",
-    "ffmpeg-static": "^4.4.1",
-    "sodium": "^3.0.2",
-    "ytdl-core": "^4.11.0",
+    "@discordjs/opus": "^0.9.0",
+    "@discordjs/voice": "^0.14.0",
+    "discord.js": "^14.7.1",
+    "ffmpeg-static": "^5.1.0",
+    "sodium-native": "^3.4.1",
+    "ytdl-core": "^4.11.2",
     "ytpl": "^2.3.0",
-    "ytsr": "^3.6.0",
-    "cheerio": "^1.0.0-rc.10"
+    "ytsr": "^3.8.0",
+    "cheerio": "^1.0.0-rc.12"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.16.0",
-    "@typescript-eslint/parser": "^5.16.0",
-    "eslint": "^8.11.0",
-    "typescript": "^4.6.2"
+    "@typescript-eslint/eslint-plugin": "^5.47.0",
+    "@typescript-eslint/parser": "^5.47.0",
+    "eslint": "^8.30.0",
+    "typescript": "^4.9.4"
   },
   "repository": {
     "type": "git",
