Remove "experimental-fetch" flag, enabled by default since node 18

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "vibin",
-  "version": "1.3.4",
+  "version": "1.3.5",
   "description": "Discord music bot",
   "main": "dist/bot.js",
   "type": "module",
   "scripts": {
-    "start": "npx tsc && node --experimental-fetch ."
+    "start": "npx tsc && node ."
   },
   "author": "Brandon Doornbos",
   "license": "GPL-3.0",
