--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vibin",
-  "version": "1.4.6",
+  "version": "1.4.7",
   "description": "Discord music bot",
   "main": "dist/bot.js",
   "type": "module",
@@ -11,7 +11,7 @@
   "license": "GPL-3.0",
   "dependencies": {
     "@discordjs/opus": "^0.9.0",
-    "@discordjs/voice": "^0.14.0",
+    "@discordjs/voice": "^0.14.1-dev.1678449899-1b29099.0",
     "discord.js": "^14.7.1",
     "ffmpeg-static": "^5.1.0",
     "sodium-native": "^3.4.1",
