--- a/package.json
+++ b/package.json
@@ -11,19 +11,19 @@
   "license": "GPL-3.0",
   "dependencies": {
     "@discordjs/opus": "^0.9.0",
-    "@discordjs/voice": "^0.14.1-dev.1678449899-1b29099.0",
-    "discord.js": "^14.7.1",
-    "sodium-native": "^3.4.1",
+    "@discordjs/voice": "^0.15.0",
+    "discord.js": "^14.8.0",
+    "sodium-native": "^4.0.1",
     "ytdl-core": "^4.11.2",
     "ytpl": "^2.3.0",
-    "ytsr": "^3.8.0",
+    "alternative-ytsr": "^1.0.2",
     "cheerio": "^1.0.0-rc.12"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.47.0",
-    "@typescript-eslint/parser": "^5.47.0",
-    "eslint": "^8.30.0",
-    "typescript": "^4.9.4"
+    "@typescript-eslint/eslint-plugin": "^5.56.0",
+    "@typescript-eslint/parser": "^5.56.0",
+    "eslint": "^8.36.0",
+    "typescript": "^5.0.2"
   },
   "repository": {
     "type": "git",
