--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vibin",
-  "version": "1.4.12",
+  "version": "1.4.11",
   "description": "Discord music bot",
   "main": "dist/bot.js",
   "type": "module",
@@ -14,7 +14,7 @@
     "@discordjs/voice": "^0.15.0",
     "discord.js": "^14.8.0",
     "sodium-native": "^4.0.1",
-    "ytdl-core": "^4.11.2",
+    "@distube/ytdl-core": "^4.11.7",
     "ytpl": "^2.3.0",
     "alternative-ytsr": "^1.0.2",
     "cheerio": "^1.0.0-rc.12"
