--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vibin",
-  "version": "1.4.12",
+  "version": "1.4.13",
   "description": "Discord music bot",
   "main": "dist/bot.js",
   "type": "module",
@@ -11,19 +11,19 @@
   "license": "GPL-3.0",
   "dependencies": {
     "@discordjs/opus": "^0.9.0",
-    "@discordjs/voice": "^0.15.0",
-    "discord.js": "^14.8.0",
-    "sodium-native": "^4.0.1",
-    "@distube/ytdl-core": "^4.11.7",
-    "ytpl": "^2.3.0",
-    "alternative-ytsr": "^1.0.2",
+    "@discordjs/voice": "^0.16.1",
+    "discord.js": "^14.14.1",
+    "sodium-native": "^4.0.4",
+    "@distube/ytdl-core": "^4.13.2",
+    "@distube/ytpl": "^1.2.1",
+    "@distube/ytsr": "1.2.0",
     "cheerio": "^1.0.0-rc.12"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.56.0",
-    "@typescript-eslint/parser": "^5.56.0",
-    "eslint": "^8.36.0",
-    "typescript": "^5.0.2"
+    "@typescript-eslint/eslint-plugin": "^6.11.0",
+    "@typescript-eslint/parser": "^6.11.0",
+    "eslint": "^8.53.0",
+    "typescript": "^5.2.2"
   },
   "repository": {
     "type": "git",
