Add ytmusic as search provider
This makes searches via spotify significantly more accurate, as well as
making the default use of 'music bot' much less frustrating.

But some people might not prefer it for normal searches, so that is
configurable via the usual config interface and new options.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vibin",
-  "version": "1.5.5",
+  "version": "1.6.0",
   "description": "Discord music bot",
   "main": "dist/bot.js",
   "type": "module",
@@ -14,7 +14,8 @@
     "@distube/ytdl-core": "^4.13.3",
     "@distube/ytpl": "^1.2.1",
     "@distube/ytsr": "^2.0.0",
-    "sodium-native": "^4.0.9"
+    "sodium-native": "^4.0.9",
+    "ytmusic-api": "^5.2.1"
   },
   "devDependencies": {
     "eslint": "^8.56.0",
