--- a/package.json
+++ b/package.json
@@ -1,28 +1,28 @@
 {
   "name": "vibin",
-  "version": "1.7.8",
+  "version": "1.7.9",
   "description": "Discord music bot. Works with YouTube, YouTube Music and Spotify",
   "main": "src/bot.ts",
   "type": "module",
   "author": "Brandon Doornbos",
   "license": "GPL-3.0",
   "dependencies": {
-    "cheerio": "^1.0.0-rc.12",
-    "discord.js": "^14.15.3",
-    "@discordjs/voice": "^0.17.0",
-    "@distube/ytdl-core": "^4.13.4",
+    "cheerio": "^1.0.0",
+    "discord.js": "^14.19.1",
+    "@discordjs/voice": "^0.18.0",
+    "@distube/ytdl-core": "^4.16.9",
     "@distube/ytpl": "^1.2.1",
     "@distube/ytsr": "^2.0.4",
     "opusscript": "^0.1.1",
-    "sodium-native": "^4.1.1",
+    "sodium-native": "^5.0.1",
     "@spotify/web-api-ts-sdk": "^1.2.0",
-    "ytmusic-api": "^5.2.1"
+    "ytmusic-api": "^5.3.0"
   },
   "devDependencies": {
-    "eslint": "^9.6.0",
-    "@eslint/js": "^9.6.0",
-    "typescript": "^5.5.3",
-    "typescript-eslint": "^7.15.0"
+    "eslint": "^9.25.1",
+    "@eslint/js": "^9.25.1",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.31.1"
   },
   "repository": {
     "type": "git",
